# cpp-v8-typescript-extensions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindV8.cmake
scripts/: index.js  index.ts  tsconfig.json  types.d.ts
src/: V8Bindings.h  V8Platform.h  V8Runtime.h  main.cpp
src/bindings/: CoffeeMachineBinding.h  GlobalFunctions.h  RecipeBinding.h  V8ObjectWrapper.h
src/models/: CoffeeMachine.h  Recipe.h
